@@ -1,4 +1,6 @@
 
+12/09/2005	frmb	experimentally added "_" as record-subscription in the parser
+12/09/2005	frmb	various updates, added target info to _bytesfor() calls
 11/09/2005	frmb	split occampi:namestart into occampi:namestartname
 11/09/2005	frmb	initial support for RECORDSUBs
 10/09/2005	frmb	split front-end data type stuff into occampi_dtype.c
